--- a/index.html
+++ b/index.html
@@ -1,7 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" data-theme="dark">
+
+<head>
+    <meta charset="UTF-8">
+
+    <title>goat site</title>
+    <link rel="stylesheet" href="css/pico/pico.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="dump/this/icon2-modified.png">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div id="header">
+        <img id="opts-button-icon" src="dump/this/options_icon.svg">
+        <div id="header-sub" class="centerXY">
+            <img id="header-sub-icon" src="dump/this/icon2-modified.png">
+            <h3 id="header-sub-label">Ski&zeta;</h3>
+        </div>
+
+        <div id="select">
+            <h2 class="select selected">README</h2>
+            <h2 class="select">DOCS</h2>
+            <h2 class="select">WORKING ON</h2>
+            <h2 class="select">PROJECTS</h2>
+            <h2 class="select" id="last">GAMES</h2>
+        </div>
+    </div>
+    <div id="sidebar" style="display: none;">
+        <a href="https://github.com/Sk1-z" class="centerXY">
+            <img src="dump/this/github.png" class="social-icon">
+            <h2 class="social-label">Github</h2>
+        </a>
+    </div>
+    <div id="content-container" class="centerX">
+        <div id="content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Odio morbi quis commodo odio aenean sed adipiscing diam. Justo nec ultrices dui sapien.
+            Purus in massa tempor nec feugiat nisl pretium. Ac placerat vestibulum lectus mauris ultrices eros in. Ipsum
+            consequat nisl vel pretium lectus quam id. Nunc pulvinar sapien et ligula ullamcorper malesuada. Est
+            placerat in egestas erat imperdiet sed euismod. Ullamcorper velit sed ullamcorper morbi tincidunt ornare
+            massa. Lacus laoreet non curabitur gravida arcu ac tortor dignissim. Nisi vitae suscipit tellus mauris.
+            Lobortis mattis aliquam faucibus purus in massa. Massa tincidunt dui ut ornare lectus sit amet. Ornare
+            lectus sit amet est placerat in. Duis at tellus at urna. Velit laoreet id donec ultrices tincidunt arcu. Ut
+            etiam sit amet nisl purus.
+
+            Vitae congue eu consequat ac felis donec et. Risus in hendrerit gravida rutrum. Ac feugiat sed lectus
+            vestibulum mattis ullamcorper. Mi sit amet mauris commodo quis imperdiet massa. Nulla posuere sollicitudin
+            aliquam ultrices sagittis orci a. Massa placerat duis ultricies lacus sed turpis. Urna cursus eget nunc
+            scelerisque viverra mauris in. Id cursus metus aliquam eleifend mi in nulla posuere sollicitudin. Vivamus
+            arcu felis bibendum ut tristique et. Massa sapien faucibus et molestie ac feugiat sed lectus vestibulum.
+            Blandit aliquam etiam erat velit scelerisque in. Ac auctor augue mauris augue neque gravida in fermentum et.
+            Rutrum quisque non tellus orci.
+
+            Sed adipiscing diam donec adipiscing tristique. Ultrices vitae auctor eu augue ut. Sed risus ultricies
+            tristique nulla aliquet enim tortor. Scelerisque eu ultrices vitae auctor eu augue ut lectus. Enim nunc
+            faucibus a pellentesque sit amet porttitor eget. Convallis aenean et tortor at risus viverra adipiscing.
+            Feugiat sed lectus vestibulum mattis ullamcorper. Ut enim blandit volutpat maecenas volutpat blandit aliquam
+            etiam erat. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Pulvinar elementum integer enim
+            neque volutpat ac tincidunt vitae semper. Cursus vitae congue mauris rhoncus. A scelerisque purus semper
+            eget duis at tellus. Nibh sit amet commodo nulla facilisi. Amet porttitor eget dolor morbi non arcu risus
+            quis. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Fermentum posuere urna nec
+            tincidunt praesent semper. Aliquet risus feugiat in ante metus dictum at tempor commodo. Quisque id diam vel
+            quam elementum pulvinar etiam. Feugiat nisl pretium fusce id.
+
+            Donec ultrices tincidunt arcu non sodales. Commodo odio aenean sed adipiscing diam donec adipiscing. Aenean
+            sed adipiscing diam donec adipiscing tristique. Adipiscing enim eu turpis egestas pretium. Nam at lectus
+            urna duis. Sodales neque sodales ut etiam. Aliquam sem fringilla ut morbi tincidunt augue interdum velit
+            euismod. Amet justo donec enim diam vulputate. Enim tortor at auctor urna nunc id cursus. Non enim praesent
+            elementum facilisis leo vel fringilla est ullamcorper. Cursus euismod quis viverra nibh cras pulvinar mattis
+            nunc. Arcu odio ut sem nulla pharetra diam sit amet nisl. Habitasse platea dictumst vestibulum rhoncus est
+            pellentesque elit ullamcorper. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida.
+            Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Convallis a cras semper auctor neque vitae
+            tempus quam.
+
+            Malesuada proin libero nunc consequat interdum varius sit. Suspendisse potenti nullam ac tortor vitae purus
+            faucibus. In ornare quam viverra orci sagittis. Facilisis volutpat est velit egestas dui id ornare. Bibendum
+            neque egestas congue quisque egestas. Non nisi est sit amet facilisis magna etiam tempor. Aenean vel elit
+            scelerisque mauris pellentesque pulvinar pellentesque. Libero justo laoreet sit amet cursus sit amet dictum.
+            Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Magna fermentum iaculis eu non. Ultrices mi tempus
+            imperdiet nulla malesuada pellentesque elit. Diam donec adipiscing tristique risus nec. Id nibh tortor id
+            aliquet. Nisi est sit amet facilisis magna. Morbi tristique senectus et netus.
+        </div>
+    </div>
 </body>
+<script src="ts/main.js"></script>
+
 </html>
