--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
         <div class="content" id="photo-content" style="display:none;"></div>
     </div>
 </body>
-<script src="ts/js/main.js"></script>
+<script src="main.js"></script>
 
 </html>
