Add projects and stuff

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <a href="https://github.com/Sk1-z" class="centerXY">
                 <img src="img/github.png" class="social-icon">
             </a>
+            <a href="https://wakatime.com/@Skiz" class="centerXY">
+                <img src="img/wakatime.png" class="social-icon">
+            </a>
         </div>
 
         <div id="select">
@@ -52,6 +55,6 @@
         <div class="content" id="photo-content" style="display:none;"></div>
     </div>
 </body>
-<script src="main.js"></script>
+<script src="ts/main.js"></script>
 
 </html>
