Style stuff and extra options

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div id="select">
-            <h2 class="select selected">README</h2>
+            <h2 class="select selected-header">README</h2>
             <h2 class="select">DOCS</h2>
             <h2 class="select">PROJECTS</h2>
             <h2 class="select">GAMES</h2>
@@ -32,20 +32,24 @@
         </div>
     </div>
     <div id="sidebar" style="display: none;">
-        <h2 class="accent" style="text-decoration: underline; margin-bottom: 0;">DOCS|PROJECTS|GAMES</h2>
-        <h2 class="accent" style="margin-top:0;">Sort</h2>
+        <h2 class="secondary" style="text-decoration: underline; margin-bottom: 0;">DOCS - PROJECTS - GAMES</h2>
+        <h2 class="secondary" style="margin-top:0;">Sort</h2>
         <h3 class="sort-select selected">Date desc.</h3>
         <h3 class="sort-select">Date asc.</h3>
         <h3 class="sort-select">A-Z</h3>
         <h3 class="sort-select">Z-A</h3>
-        <h2 class="accent" style="text-decoration: underline; margin-bottom: 0;">PHOTOGRAPHY</h2>
-        <h2 class="accent" style="margin-top:0;">Sort</h2>
+        <h2 class="secondary">Show</h2>
+        <h3 class="show-select">All</h3>
+        <h3 class="show-select selected">Unarchived</h3>
+        <h3 class="show-select">Archived</h3>
+        <h2 class="secondary" style="text-decoration: underline; margin-bottom: 0;">PHOTOGRAPHY</h2>
+        <h2 class="secondary" style="margin-top:0;">Sort</h2>
         <h3 class="sort-selectf selected">Descend</h3>
         <h3 class="sort-selectf">Ascend</h3>
-        <h2 class="accent">Show</h2>
-        <h3 class="show-select selected">All</h3>
-        <h3 class="show-select">Untitled #1</h3>
-        <h3 class="show-select">Jah's Vision</h3>
+        <h2 class="secondary">Show</h2>
+        <h3 class="show-selectf selected">All</h3>
+        <h3 class="show-selectf">Untitled #1</h3>
+        <h3 class="show-selectf">Jah's Vision</h3>
     </div>
     <div id="content-container" class="centerX">
         <div class="content" style="display:block;"></div>
