--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </div>
     </div>
     <div id="sidebar" style="display: none;">
-        <h2 class="secondary" style="text-decoration: underline; margin-bottom: 0;">DOCS - PROJECTS - GAMES</h2>
+      <div style="float: left; margin: 0 5vh 5vh;">
+        <h2 class="secondary" style="text-decoration: underline; margin-bottom: 0;">PROJECTS</h2>
         <h2 class="secondary" style="margin-top:0;">Sort</h2>
         <h3 class="sort-select selected">Date desc.</h3>
         <h3 class="sort-select">Date asc.</h3>
@@ -42,6 +43,9 @@
         <h3 class="show-select">All</h3>
         <h3 class="show-select selected">Unarchived</h3>
         <h3 class="show-select">Archived</h3>
+      </div>
+      <div style="margin: 0 5vh 5vh;">
+
         <h2 class="secondary" style="text-decoration: underline; margin-bottom: 0;">PHOTOGRAPHY</h2>
         <h2 class="secondary" style="margin-top:0;">Sort</h2>
         <h3 class="sort-selectf selected">Descend</h3>
@@ -50,6 +54,7 @@
         <h3 class="show-selectf selected">All</h3>
         <h3 class="show-selectf">Untitled #1</h3>
         <h3 class="show-selectf">Jah's Vision</h3>
+      </div>
     </div>
     <div id="content-container" class="centerX">
         <div class="content" style="display:block;"></div>
